# roi2bb

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
roi2bb/: converter.py  utils.py
